# news-crawler

./: .gitignore  docker-compose.yml  pyproject.toml
db/: Dockerfile  config.py  init_models.py
db/core/: db.py
db/models/: __init__.py  article_sentiment.py
scraper/: main.py
scraper/config/: config.py
scraper/core/: observer.py  parser.py  processor.py  scraper.py
scraper/core/storages/: __init__.py  json_storage.py  s3_storage.py
scraper/interfaces/: downloader.py  observer.py  processor.py  storage.py
scraper/models/: __init__.py  article_data.py  scraped_item.py  storage.py
scraper/utils/: s3_helpers.py
spark/common/: spark_session.py
spark/config/: spark_config.py
spark/core/: __init__.py  processor.py  reader.py  storage.py
spark/interfaces/: __init__.py  processor.py  reader.py  storage.py
spark/jobs/: sentiment_analysis.py
src/: pyproject.toml
src/scraper/: main.py
src/scraper/config/: config.py  logger_config.py
src/scraper/core/: downloader.py  factory.py  observer.py  parser.py  processor.py  scraper.py
src/scraper/core/storages/: __init__.py  json_storage.py  s3_storage.py
src/scraper/exceptions/: __init__.py  exceptions.py
src/scraper/interfaces/: __init__.py  observer.py  parser.py  processor.py
src/scraper/models/: __init__.py  processor.py  scraped_item.py  storage.py
src/scraper/utils/: scraper_helpers.py
