[tool.poetry]
name = "news-crawler"
version = "0.1.0"
description = ""
authors = ["Hao Ting <boscoting0522@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.3"
pandas = "^2.2.3"
torch = "^2.5.1"
transformers = "^4.46.3"
pydantic-settings = "^2.6.1"
pyarrow = "^18.1.0"
aiohttp = "^3.11.9"
fake-useragent = "^2.0.0"
bs4 = "^0.0.2"
aiofiles = "^24.1.0"
boto3 = "^1.35.76"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false