[tool.poetry]
name = "news-crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "scraper" }
]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.2"
fake-useragent = "^1.5.1"
bs4 = "^0.0.2"
aiofiles = "^24.1.0"
boto3 = "^1.35.63"
lxml = "^5.3.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
pyarrow = "^18.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
